--- a/css/estilos.css
+++ b/css/estilos.css
@@ -118,7 +118,7 @@ body{
 .texto_ban{
 	position: absolute;
 	top: 70px;
-	left: 12%;
+	left: 8%;
 	color: #eee;
 	padding: 0 50px;
 }
@@ -141,6 +141,7 @@ body{
 }
 .cont_text h5{
 	padding-top: 20px;
+	padding-left: 5px;
 }
 #btn_masS{
 	padding: 10px 25px;
@@ -155,6 +156,26 @@ body{
 
 .barra_ban{
 	width: 100%;
-	height: 5px;
-	background: rgba(110,110,110,0.40);
+	height: 15px;
+	background: rgba(110,110,110,0.30);
+	margin: -4px;
+	padding: 0;
+	position: relative;
 }
+.barra_ban:after{
+	content: "";
+	background: rgba(199,0,3,1);
+	width: 100%;
+	height: 3px;
+	position: absolute;
+	left: 0;
+	bottom: 5px;
+}
+/*------ General Contenedor ------*/
+.contenido_gen{
+	background: red;
+	width: 80%;
+	height: 500px;
+	margin-top: 50px;
+}
+/*-------- Quienes Somos ----------*/
