--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,7 +33,7 @@ body{
 	right: auto;
 	margin: auto;
 	transform:translateX(-50%)
-		      translateY(-5px)rotate(46deg);
+		      translateY(-8px)rotate(46deg);
 	justify-content: center;
 }
 .botons:after{
@@ -118,13 +118,13 @@ body{
 .texto_ban{
 	position: absolute;
 	top: 70px;
-	left: 12%;
+	left: 8%;
 	color: #eee;
 	padding: 0 50px;
 }
-.linea{
+.linea, .linea2{
 	width: 50px;
-	height: 3px;
+	height: 1px;
 	background: rgba(225,225,225,.7);
 	position: absolute;
 	top: 53%;
@@ -141,6 +141,7 @@ body{
 }
 .cont_text h5{
 	padding-top: 20px;
+	padding-left: 5px;
 }
 #btn_masS{
 	padding: 10px 25px;
@@ -155,6 +156,81 @@ body{
 
 .barra_ban{
 	width: 100%;
-	height: 5px;
-	background: rgba(110,110,110,0.40);
+	height: 15px;
+	background: rgba(110,110,110,0.30);
+	margin: -4px;
+	padding: 0;
+	position: relative;
+}
+.barra_ban:after{
+	content: "";
+	background: rgba(199,0,3,1);
+	width: 100%;
+	height: 3px;
+	position: absolute;
+	left: 0;
+	bottom: 5px;
+}
+/*------ General Contenedor ------*/
+.contenido_gen{
+	
+	width: 76%;
+	height: 500px;
+	position: relative;
+}
+p{
+	font-size: 18px;
+}
+/*-------- Quienes Somos ----------*/
+.blanc_cont1{
+	height: 110px;
+	margin-top: -11px;
+	z-index: 400;
+	background: #fff;
+}
+.blanc_cont{
+	height: 100px;
+}
+.cont{
+	width: 101%;
+}
+.cua_cont{
+	background: rgba(199,0,3,1);
+	height: 350px;
+}
+.cont_text h1{
+	font-size: 50px;
+	padding-top: 10px;
+}
+.linea2{
+	top: 120px;
+	left: -7%;
+	background: rgba(199,0,3,1);
+}
+#btn_comp{
+	padding: 15px 20px;
+	margin-top: 50px;
+	background: rgba(199,0,3,1);
+	color: #fff;
+	border: none;
+	float: left;
+	cursor: pointer;
+}
+#btn_comp:hover{
+	background: rgba(199,0,3,0.8);
+}
+.img_somos{
+	height: 350px;
+	width: 250px;
+	overflow: hidden;
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	box-shadow: 2px 2px 5px 0px rgba(23,3,5,.6);
+}
+.img_somos img{
+	width: 400px;
+	height: 350px;
+	transform: translateX(-20%);
+	
 }
