--- a/css/estilos.css
+++ b/css/estilos.css
@@ -184,23 +184,39 @@ p{
 /*-------- Quienes Somos ----------*/
 .blanc_cont1{
 	height: 110px;
-	margin-top: -11px;
+	margin-top: -4px;
 	z-index: 400;
-	background: #fff;
+	background: rgb(255, 255, 255);
 }
 .blanc_cont{
 	height: 100px;
+	width: 100px;
 }
 .cont{
 	width: 101%;
 }
 .cua_cont{
-	background: rgba(199,0,3,1);
+	background: rgba(199,0,3,0.8);
 	height: 350px;
+	position: relative;
+	overflow: hidden;
+}
+.cua_cont div{
+	width: 800px;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.cua_cont img{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 600px;
+	height: 450px;
 }
 .cont_text h1{
 	font-size: 50px;
-	padding-top: 10px;
+	padding-top: 12px;
 }
 .linea2{
 	top: 120px;
@@ -209,7 +225,7 @@ p{
 }
 #btn_comp{
 	padding: 15px 20px;
-	margin-top: 50px;
+	margin-top: 0px;
 	background: rgba(199,0,3,1);
 	color: #fff;
 	border: none;
@@ -221,16 +237,21 @@ p{
 }
 .img_somos{
 	height: 350px;
-	width: 250px;
+	width: 280px;
 	overflow: hidden;
 	position: absolute;
 	top: 30%;
 	left: 50%;
-	box-shadow: 2px 2px 5px 0px rgba(23,3,5,.6);
+	box-shadow: 0px 2px 5px 0px rgba(23,3,5,.6);
 }
 .img_somos img{
 	width: 400px;
 	height: 350px;
 	transform: translateX(-20%);
 	
+}
+.barra_smos{
+	background: rgba(199,0,3,0.8);
+	height: 50px;
+	width: 100%;
 }
