--- a/css/estilos.css
+++ b/css/estilos.css
@@ -209,8 +209,8 @@ p{
 }
 .cua_cont img{
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: -50;
+	left: -20;
 	width: 600px;
 	height: 450px;
 }
@@ -251,7 +251,50 @@ p{
 	
 }
 .barra_smos{
-	background: rgba(199,0,3,0.8);
-	height: 50px;
+	background: rgba(199,0,3,1);
+	height: 3px;
 	width: 100%;
+}
+
+/*------------ concepto -------*/
+.fras_cont{
+	width: 100%;
+	height: 300px;
+	margin-top: 58px;
+	overflow: hidden;
+}
+.fondo_fras{
+	background: url(../imagenes/terraza.jpeg);
+	height: 300px; 
+	text-align: center;
+	background-size: cover;
+	position: relative;
+	justify-content: center;
+	display: flex;
+}
+.fondo_fras:before{
+	content:"";
+	background: rgba(255, 255, 255, 0.4);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+}
+.frase{
+	width: 50%;
+	position: absolute;
+	left: 25%;
+	top: 30%;
+	font-size: 40px;
+}
+.frase span{
+	font-size: 150px;
+	color: rgba(199,0,3,1);
+	position: absolute;
+	top: -40%;
+	left: -6%;
+}
+.frase h3{
+	color: rgba(199,0,3,1);
+	font-size: 18px;
 }
