--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,20 @@
-body{
+*{
 	margin: 0;
 	padding: 0;
 	font-family: 'Dosis', sans-serif;
 }
+body{
+	background: rgb(243, 241, 241);
+}
 .menu{
+	width: 100.6%;
 	position: absolute;
 	top: 70px;
-	right: 10px;
+	right: 0px;
 	z-index: 1000;
+}
+.fila_menu{
+	width: 100%;;
 }
 .menu-botones{
 	background: #fff;
@@ -186,7 +193,7 @@ p{
 	height: 110px;
 	margin-top: -4px;
 	z-index: 400;
-	background: rgb(255, 255, 255);
+	background: rgb(243, 241, 241);
 }
 .blanc_cont{
 	height: 100px;
@@ -256,12 +263,15 @@ p{
 	width: 100%;
 }
 
-/*------------ concepto -------*/
+/*------------ frase -------*/
 .fras_cont{
 	width: 100%;
 	height: 300px;
 	margin-top: 58px;
 	overflow: hidden;
+}
+.frass_fila{
+	width: 100%;
 }
 .fondo_fras{
 	background: url(../imagenes/terraza.jpeg);
@@ -297,4 +307,152 @@ p{
 .frase h3{
 	color: rgba(199,0,3,1);
 	font-size: 18px;
+}
+.testimonios{
+	width: 100%;
+	height: 100px;
+	position: absolute;
+	right: 0;
+	text-align: center;
+	padding-top: 40px;
+}
+.testimonios a{
+	text-decoration: none;
+	color:rgba(110, 110, 110, 0.6);
+}
+.testimonios a:hover{
+	color:rgba(110, 110, 110, 0.8);
+}
+
+/*---- Product Servicios ----------*/
+.prod_serv{
+	margin-top: 100px;
+	width: 100%;
+	position: relative;
+}
+.fila1, .fila2{
+	width: 100%;
+}
+.fila1{
+	width: 97%;
+	background: url(../imagenes/casa_banner.jpg);
+	background-position-x: -40em;
+	background-position-y: -10em;
+}
+.fond_serv{
+	height: 300px;
+	background: rgba(199,0,3,0.8);
+	text-align: center;
+	padding-top: 115px;
+	color: #fff;
+}
+.fond_serv p{
+	font-size: 12px;
+}
+.fond_serv_bln{
+	height: 300px;
+	background: rgb(243, 241, 241);
+}
+.linea_ps{
+	height: 20px;
+	background: rgba(110,110,110,0.30);
+}
+.casas_opciones{
+	position: absolute;
+	top: 180px;
+	left: -1%;
+}
+.casas{
+	text-align: center;
+	cursor: pointer;
+}
+.imagenes_casas{
+	width: 250px;
+	height: 250px;
+	overflow: hidden;
+	margin: 0px auto;
+	transition: all 0.2s;
+	position: relative;
+}
+.imagenes_casas img{
+	width: 800px;
+	height: 600px;
+	transform: translateX(-35%) translateY(-10%);
+}
+.marco{
+	width: 220px;
+	height: 80px;
+	padding-top: 35px;
+	border: 4px solid rgba(110, 110, 110, 0.2);
+	border-top: #fff;
+	margin: 0 auto;
+	transition: all 0.2s;
+	position: relative;
+	overflow: hidden;
+}
+.marco p{
+	font-size: 12px;
+	color: rgba(110, 110, 110, 0.8);
+}
+.casas:hover .imagenes_casas{
+	width: 270px;
+	height: 270px;
+	transition: all 0.2s;
+	box-shadow: 0 0 5px rgba(110, 110, 110, 0.8);
+}
+.casas:hover .marco{
+	border: 4px solid rgba(199,0,3,0.8);
+	border-top: #fff;
+	transition: all 0.2s;
+}
+.casas:hover .marco h2{
+	color: rgba(199,0,3,0.8);
+}
+.casas:hover .marco p{
+	color: black;
+}
+.casas:hover .marco:after{
+	content: "";
+	width: 25px;
+	height: 25px;
+	background:rgba(199,0,3,0.8);
+	text-align: center;
+	position: absolute;
+	left: 50%;
+	bottom: 0px;
+	transform: translateX(-50%) translateY(70%) rotate(45deg);
+	z-index: 9000;
+	transition: all 0.2s;
+}
+.casas:hover .icono_pers:before{
+	content:"";
+	background: url(../imagenes/icono_pers.png);
+	background-size: cover;
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	position: absolute;
+	bottom: 90px;
+	transform: translateX(90%);
+	transition: all 0.2s;
+}
+.linea3{
+	background: rgba(199,0,3,1);
+	height: 3px;
+}
+
+/*----------- Footer -------------*/
+.footer_cont{
+	width: 100%;
+	margin: 0;
+	background: rgb(199, 199, 199);
+}
+.logo_footer{
+	background: rgb(243, 241, 241);
+	height: 70px;
+	text-align: center;
+	padding-top: 15px;
+}
+.conten_foo{
+	height: 400px;
 }
